; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/broadcom/extr_tg3.c_tg3_rxcpu_pause.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/broadcom/extr_tg3.c_tg3_rxcpu_pause.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tg3 = type { i32 }

@RX_CPU_BASE = common dso_local global i64 0, align 8
@CPU_STATE = common dso_local global i64 0, align 8
@CPU_MODE = common dso_local global i64 0, align 8
@CPU_MODE_HALT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tg3*)* @tg3_rxcpu_pause to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tg3_rxcpu_pause(%struct.tg3* %0) #0 {
  %2 = alloca %struct.tg3*, align 8
  %3 = alloca i32, align 4
  store %struct.tg3* %0, %struct.tg3** %2, align 8
  %4 = load %struct.tg3*, %struct.tg3** %2, align 8
  %5 = load i64, i64* @RX_CPU_BASE, align 8
  %6 = call i32 @tg3_pause_cpu(%struct.tg3* %4, i64 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i64, i64* @RX_CPU_BASE, align 8
  %8 = load i64, i64* @CPU_STATE, align 8
  %9 = add nsw i64 %7, %8
  %10 = call i32 @tw32(i64 %9, i32 -1)
  %11 = load i64, i64* @RX_CPU_BASE, align 8
  %12 = load i64, i64* @CPU_MODE, align 8
  %13 = add nsw i64 %11, %12
  %14 = load i32, i32* @CPU_MODE_HALT, align 4
  %15 = call i32 @tw32_f(i64 %13, i32 %14)
  %16 = call i32 @udelay(i32 10)
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @tg3_pause_cpu(%struct.tg3*, i64) #1

declare dso_local i32 @tw32(i64, i32) #1

declare dso_local i32 @tw32_f(i64, i32) #1

declare dso_local i32 @udelay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
